--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -338,7 +338,7 @@ header {
     padding-bottom: 92px;
     .wrapper {
         .reviews__block {
-            margin: 0 2%;
+            margin: 0 auto;
             max-width: 1006px;
             display: flex;
             flex-direction: column;
